[project]
name = "llm-inf"
version = "0.1.0"
description = "LLM inference learning project — HuggingFace, Ollama, vLLM on DGX Spark"
requires-python = ">=3.11,<3.14"

dependencies = [
    "torch>=2.7",
    "transformers",
    "accelerate",
    "requests",
    "openai",
]

[project.optional-dependencies]
vllm = ["vllm"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
